Fix SASS break in change

--- a/src/scss/tools/_mixins.scss
+++ b/src/scss/tools/_mixins.scss
@@ -1,8 +1,10 @@
 $html-font-size: 16; //16px
 
+@use "sass:math";
+
 @function toRem($value) {
 
-    $remValue: calc(#{$value}, #{$html-font-size}) + rem;
+    $remValue: math.div($value, $html-font-size) + rem;
   
     @return $remValue;
   
